<?xml version="1.0"?>
<package format="2">
  <name>xela_server</name>
  <version>1.5.0</version>
  <description>The XELA Sensor Server node</description>

  <maintainer email="matthias@xelarobotics.com">Matt</maintainer>
  <license>GPLv3</license>
  <url type="website">http://xelarobotics.com</url>
  <author email="matthias@xelarobotics.com">Matt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
